--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-phone-input-2": "^2.13.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
